adding team section

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -167,7 +167,7 @@
             <h1>Learning Programs</h1>
         </div>
        
-<!-- card starts -->
+<!-- cards starts -->
         <div class="cards">
            <div class="childs">
             <div class="card 1">
@@ -262,41 +262,83 @@
 
   </div>
       
-
     <!-- css in slide-container.css  -->
   <div class="Team">  
-      <div class="slide_container">
-              <div class="card1">
-                   <div class="image-content">
-                       <span class="overlay"></span>
-                       <div class="card-image">
-                          <img src="images/pinak.jpg" alt="" class="card-img">
-                     </div>
-                </div>
-                <div class="card-content">
-                  <h2 class="name">pinak dixit</h2>
-                </div>
-                <div class="card-content content2" >
-                  <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis assumenda qui ut, soluta eaque accusantium ducimus possimus magni dignissimos tenetur, ipsum facere tempora quis earum eos rem veritatis quo mollitia?</p>
-            </div>
-         </div>
+   <div class="home-container">
+      <div class="profile-card">
+          <div class="img">
+              <img src="/images/aanan.jpg">
+          </div>
+          <div class="caption">
+              <h3>Aanan</h3>
+              <p>Full Stack Developer</p>
+              <div class="social-links">
+                  <i class="fa-brands fa-facebook"></i>
+                  <i class="fa-brands fa-twitter"></i>
+                  <i class="fa-brands fa-instagram"></i>
+              </div>
+          </div>
       </div>
-      <div class="slide_container">
-              <div class="card1">
-                   <div class="image-content">
-                       <span class="overlay"></span>
-                       <div class="card-image">
-                          <img src="images/pinak.jpg" alt="" class="card-img">
-                     </div>
-                </div>
-                <div class="card-content">
-                  <h2 class="name">pinak dixit</h2>
-                </div>
-                <div class="card-content content2" >
-                  <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis assumenda qui ut, soluta eaque accusantium ducimus possimus magni dignissimos tenetur, ipsum facere tempora quis earum eos rem veritatis quo mollitia?</p>
-            </div>
-         </div>
+      <div class="profile-card">
+          <div class="img">
+              <img src="/images/pinak.jpg">
+          </div>
+          <div class="caption">
+              <h3>Pinak</h3>
+              <p>Front End Developer</p>
+              <div class="social-links">
+                  <i class="fa-brands fa-facebook"></i>
+                  <i class="fa-brands fa-twitter"></i>
+                  <i class="fa-brands fa-instagram"></i>
+              </div>
+          </div>
       </div>
+      <div class="profile-card">
+          <div class="img">
+              <img src="/images/ankit.jpg">
+          </div>
+          <div class="caption">
+              <h3>Ankit</h3>
+              <p>Back End Developer</p>
+              <div class="social-links">
+                  <i class="fa-brands fa-facebook"></i>
+                  <i class="fa-brands fa-twitter"></i>
+                  <i class="fa-brands fa-instagram"></i>
+              </div>
+          </div>
+      </div>
+      <div class="profile-card">
+          <div class="img">
+              <img src="/images/Tushar.jpg">
+          </div>
+          <div class="caption">
+              <h3>Tushar</h3>
+              <p>Back End Developer</p>
+              <div class="social-links">
+                  <i class="fa-brands fa-facebook"></i>
+                  <i class="fa-brands fa-twitter"></i>
+                  <i class="fa-brands fa-instagram"></i>
+              </div>
+          </div>
+      </div>
+      <div class="profile-card">
+          <div class="img">
+              <img src="/images/ashvick.jpeg">
+          </div>
+          <div class="caption">
+              <h3>Tushar</h3>
+              <p>Back End Developer</p>
+              <div class="social-links">
+                  <i class="fa-brands fa-facebook"></i>
+                  <i class="fa-brands fa-twitter"></i>
+                  <i class="fa-brands fa-instagram"></i>
+              </div>
+          </div>
+      </div>
+  </div>
+  
+  
+  
 
 
 
