--- a/public/stylesheets/main_img.css
+++ b/public/stylesheets/main_img.css
@@ -1,9 +1,12 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900");
 
 body{
-  background-color: black;
+  background-color:#0C52A1;
+  
 
-
+}
+body::-webkit-scrollbar{
+  display: none;
 }
 
 .main_img{
