--- a/public/stylesheets/service.css
+++ b/public/stylesheets/service.css
@@ -16,7 +16,7 @@
     border-left: 2px solid aqua ; /* Border on the left side */
     border-right: 2px solid aqua;
     border-top-left-radius:5%;
-    border-bottom-left-radius:5%;
+    /* border-bottom-left-radius:5%; */
     border-bottom-right-radius:5%;
     padding-bottom: 6rem;    
     /* box-shadow: 0 0 10px 5px ; */
@@ -47,7 +47,7 @@
     height: 100%;
     border: 2px solid red;
     display: flex;
-    justify-content:center;
+    justify-content:space-evenly;
     align-items: center;
     gap: 30px;
     flex-wrap: wrap;
