--- a/views/slider.html
+++ b/views/slider.html
@@ -4,50 +4,55 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/public/stylesheets/style.css">
+    <link rel="stylesheet" href="/public/stylesheets/try.css">
 </head>
 <body>
-    <div class="cards-list">
-  
-        <div class="card 1">
-          <div class="card_image">
-             <img src="https://i.redd.it/b3esnz5ra34y.jpg" /> 
+ 
+  <div class="home-container">
+    <div class="profile-card">
+        <div class="img">
+            <img src="./man.jpg">
+        </div>
+        <div class="caption">
+            <h3>Tom Cruise</h3>
+            <p>Full Stack Developer</p>
+            <div class="social-links">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-instagram"></i>
             </div>
-          <div class="card_title title-white">
-            <p>Card Title</p>
-          </div>
         </div>
-        
-          <div class="card 2">
-          <div class="card_image">
-            <img src="https://i.redd.it/b3esnz5ra34y.jpg" /> 
-            <!-- <img src="https://cdn.blackmilkclothing.com/media/wysiwyg/Wallpapers/PhoneWallpapers_FloralCoral.jpg" /> -->
+    </div>
+    <div class="profile-card">
+        <div class="img">
+            <img src="./man.jpg">
+        </div>
+        <div class="caption">
+            <h3>David Wornar</h3>
+            <p>Front End Developer</p>
+            <div class="social-links">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-instagram"></i>
             </div>
-          <div class="card_title title-white">
-            <p>Card Title</p>
-          </div>
         </div>
-        
-        <div class="card 3">
-          <div class="card_image">
-            <img src="https://i.redd.it/b3esnz5ra34y.jpg" /> 
-            <!-- <img src="https://media.giphy.com/media/10SvWCbt1ytWCc/giphy.gif" /> -->
-          </div>
-          <div class="card_title title-white">
-            <p>Card Title</p>
-          </div>
+    </div>
+    <div class="profile-card">
+        <div class="img">
+            <img src="./man.jpg">
         </div>
-          
-          <div class="card 4">
-          <div class="card_image">
-            <img src="https://i.redd.it/b3esnz5ra34y.jpg" /> 
-            <!-- <img src="https://media.giphy.com/media/LwIyvaNcnzsD6/giphy.gif" /> -->
+        <div class="caption">
+            <h3>Vin Diesel</h3>
+            <p>Back End Developer</p>
+            <div class="social-links">
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-instagram"></i>
             </div>
-          <div class="card_title title-white">
-            <p>Card Title</p>
-          </div>
-          </div>
-        
         </div>
+    </div>
+</div>
+
+
 </body>
 </html>
