--- a/public/stylesheets/service.css
+++ b/public/stylesheets/service.css
@@ -13,8 +13,8 @@
     color: aqua;
     position:absolute;
     top: 80vh;  
-    border-left: 2px solid aqua ; /* Border on the left side */
-    border-right: 2px solid aqua;
+    /* border-left: 2px solid aqua ; */
+    /* border-right: 2px solid aqua; */
     border-top-left-radius:5%;
     /* border-bottom-left-radius:5%; */
     border-bottom-right-radius:5%;
@@ -24,19 +24,41 @@
 }
 .div_title{
     /* position: absolute; */
+    /* background-color: #111; */
+    /* min-height: 100vh; */
+    
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 2vh;
 }
-.div_title h1{
-    color: orangered;
+.waviy {
+  position: relative;
 }
+.waviy span {
+  position: relative;
+  display: inline-block;
+  font-size: 40px;
+  color: #171C26;
+  font-weight: 500;
+
+  text-transform: uppercase;
+  animation: flip 2s infinite;
+  animation-delay: calc(.2s * var(--i))
+}
+@keyframes flip {
+  0%,80% {
+    transform: rotateY(360deg) 
+  }
+}
+
 
 .cards{
     box-sizing:content-box;
     height: auto;
-    border: 2px solid saddlebrown;
+    /* border: 2px solid saddlebrown; */
+    box-shadow: rgba(51, 141, 244, 0.705) 0px 30px 140px -12px 
+    inset, rgba(51, 141, 244, 0.4) 0px 18px 36px -18px inset;
     margin-top: 5vh;
     display: flex;
     justify-content: center;
@@ -45,7 +67,7 @@
 .childs{
     width: 80%;
     height: 100%;
-    border: 2px solid red;
+    /* border: 2px solid red; */
     display: flex;
     justify-content:space-evenly;
     align-items: center;
@@ -68,7 +90,7 @@
     width: 370px;
     height: 400px;
     border-radius: 40px;
-  box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.22);
+  /* box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.22); */
     cursor: pointer;
     transition: 0.4s;
   }
@@ -121,44 +143,110 @@
   .feedback{
     width: 100%;
     height: 50vh;
-    border: 2px solid black;
+    /* border: 2px solid black; */
     margin-top: 10vh;
-    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
+    box-shadow: rgba(51, 141, 244, 0.705) 0px 30px 140px -12px 
+    inset, rgba(51, 141, 244, 0.4) 0px 18px 36px -18px inset;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  
+    
 
 
   }
- .feedback .container{
- }
+  .bold{
+    padding:20px;
+    padding-left: 0px;
+    padding-right: 0px;
+    padding-bottom: 0px;
+    font-size: 36px;
+    font-weight: 800;
+    font-family: nunito,sans-serif;
+    color: #3D4D5D;
+  }
+  .b{
+    color: #3D4D5D;
+    font-size: 18px;
+    /* display: flex; 
+    justify-content:center ;
+    align-items:center ;*/
+  } 
+  #left{
+    display: flex; 
+    justify-content:center ;
+    align-items:center  
+
+
+  }
+  /* .feedback .container{ 
+    height: 42vh;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  
+  }*/
+  .fa-graduation-cap{
+    font-size: 70px;
+    color: #0C52A1;
+
+  }
+  .fa-star{
+    font-size: 70px;
+    color: #0C52A1;
+
+  }
+  .fa-earth-americas{
+    font-size: 70px;
+    color: #0C52A1;
+  }
+  .fa-desktop{
+    font-size: 70px;
+    color: #0C52A1;
+  }
+
  
  .why{
        width: 100%;
        height: auto;
-       border: 2px solid black;
+       /* border: 2px solid black; */
        margin-top: 20px;
        
  }
  .why .container1{
-  /* width: 100%; */
-      display: flex;
-       justify-content: center;
-       align-items: center;
-      border: 2px solid orange;
+       width: 100%;
+       color: black;
+      /* border: 2px solid orange; */
+      padding-left: 100px;
  }
+ .why .container1 span{
+  color: #FF752C;
+  padding-left: 10px;
+ }
+
  .why .container2{
   /* width: 100%; */
       display: flex;
       flex-wrap: wrap;
        justify-content:space-evenly;
        align-items: center;
-      border: 2px solid orange;
+      /* border: 2px solid orange; */
  }
- .why .box{
+ .img-1{
+  width: 80px;
+ }
+ .container2 .box{
   width:400px;
-  height: 200px;
+  padding: 20px;
+  min-height: 356px;
   border: 2px solid black;
   margin-top: 2rem ;
   margin-bottom : 2rem ;
  }
+ .container2 .box h2{
+  color: #171C26;
+ }
+
  .champs{
   width: 100%;
   height: auto;
