--- a/public/stylesheets/slide-container.css
+++ b/public/stylesheets/slide-container.css
@@ -21,6 +21,7 @@
             width: 100%;
             height: 100vh;
             display: flex;
+            flex-wrap: wrap;
             align-items: center;
             justify-content: center;
             background-color: #0c52a1;
