--- a/views/index.ejs
+++ b/views/index.ejs
@@ -104,7 +104,7 @@
 
                   <ul class="dropdown__menu">
                      <li>
-                        <a href="/login" class="dropdown__link">
+                        <a href="#" class="dropdown__link">
                            <i class="ri-user-line"></i> Profiles
                         </a>                          
                      </li>
@@ -131,13 +131,13 @@
                   </div>
                   <ul class="dropdown__menu">
                      <li>
-                        <a href="#" class="dropdown__link">
+                        <a href="/signup" class="dropdown__link">
                            <i class="ri-pie-chart-line"></i> SignUp
                         </a>                          
                      </li>
 
                      <li>
-                        <a href="#" class="dropdown__link">
+                        <a href="/login" class="dropdown__link">
                            <i class="ri-arrow-up-down-line"></i>SignIn
                         </a>
                      </li>
@@ -174,8 +174,8 @@
              
 
            <div class="hub">
-               <h1>THE<br>
-                  TECH TRAINING HUB</h1>
+               THE
+                  TECH<H1>TRAINING</H1> & <H1>MANUFACTURING</H1>HUB
            </div>
 
        </section>
@@ -210,8 +210,8 @@
             </div>
         </div>
        
-<!-- cards starts -->
-     <div class="cards">
+<!-- cards starts ,  all css in services.css-->
+     <!-- <div class="cards">
            <div class="childs">
             <div class="card 1">
              <div class="card_image">
@@ -259,8 +259,8 @@
 
            
            </div>
-     </div>
-        <!-- card ends -->
+     </div> -->
+  <!-- card ends -->
 
          <!-- all css in services.css -->
      <div class="feedback">    
@@ -312,6 +312,8 @@
               </div>
             </div>
      </div>
+
+
      <!--  css in service.css -->
      <div class="champs">
         <div id="container1">
@@ -334,7 +336,8 @@
       
     <!-- css in slide-container.css  -->
   <div class="Team">  
-   <div class="home-container">
+    <div class="home-container">
+     
       <div class="profile-card">
           <div class="img">
               <img src="/images/aanan.jpg">
@@ -405,17 +408,38 @@
               </div>
           </div>
       </div>
+
   </div>
-
-
-   </div>
+</div>
 
 
 
    <!-- css in footer.css -->
-   <div class="footer">
-      
+   <div class="footer-container">
+      <div class="footer">
+         <div class="waves">
+            <div class="wave" id="wave1"></div>
+            <div class="wave" id="wave2"></div>
+            <div class="wave" id="wave3"></div>
+            <div class="wave" id="wave4"></div>
+         </div>
+           <ul class="social_icon">
+            <li><a href="#"><ion-icon name="logo-facebook"></ion-icon></a></li>
+            <li><a href="#"><ion-icon name="logo-twitter"></ion-icon></a></li>
+            <li><a href="#"><ion-icon name="logo-linkedin"></ion-icon></a></li>
+            <li><a href="#"><ion-icon name="logo-instagram"></ion-icon></a></li>
 
+           </ul> 
+           <ul class="menu">
+             <li><a href="#">Home</a></li>
+             <li><a href="#">About</a></li>
+             <li><a href="#">Service</a></li>
+             <li><a href="#">Team</a></li>
+             <li><a href="#">Contact</a></li>
+
+           </ul>
+           <p> ©2024 Online Tutorials | All Rights Reserved </p>
+      </div>
    </div>
 
 
@@ -423,5 +447,9 @@
 
     <script src="/javascripts/script.js"></script>
     <script src="/javascripts/robo.js"></script>
+ 
+    <!-- for icons from ionicons.com -->
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   </body>
 </html>
