--- a/public/stylesheets/main_img.css
+++ b/public/stylesheets/main_img.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900");
 
 body{
-  background-color:#0C52A1  ;
+  background-color:#444345  ;
   
 
 }
@@ -20,6 +20,14 @@ body::-webkit-scrollbar{
     display: inline-block;
     
 }
+@media screen and (max-width:768px) {
+  .main_img img {
+    width: auto;
+       
+  }
+}
+
+
 .main_img::before { 
     content: "";
     position: absolute;
@@ -37,6 +45,7 @@ body::-webkit-scrollbar{
     width: 100%;
     height: 100%;
     object-fit: cover;
+    background-size: cover;
     filter: blur(5px) brightness(70%);
     /* background-image: ; */
 
@@ -118,6 +127,7 @@ body {
 }
 
 .hub{
+  width: 400px;
   font-size: large;
   position: absolute;
   top:45vh;
