login and signup is completed

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -104,7 +104,7 @@
 
                   <ul class="dropdown__menu">
                      <li>
-                        <a href="#" class="dropdown__link">
+                        <a href="/profile" class="dropdown__link">
                            <i class="ri-user-line"></i> Profiles
                         </a>                          
                      </li>
@@ -123,22 +123,20 @@
                   </ul>
                </li>
 
-               <li><a href="#" class="nav__link">Contact</a></li>
-
                <li  class="dropdown__item"> 
                   <div class="nav__link">
                      <i class='fas fa-user-alt' style='font-size:24px;border: 2px solid white;padding:10px;border-radius: 50%;'></i>
                   </div>
                   <ul class="dropdown__menu">
                      <li>
-                        <a href="/signup" class="dropdown__link">
-                           <i class="ri-pie-chart-line"></i> SignUp
+                        <a href="/login" class="dropdown__link">
+                           <i class="ri-pie-chart-line"></i> LogIn
                         </a>                          
                      </li>
 
                      <li>
-                        <a href="/login" class="dropdown__link">
-                           <i class="ri-arrow-up-down-line"></i>SignIn
+                        <a href="/signup" class="dropdown__link">
+                           <i class="ri-arrow-up-down-line"></i>SignUp
                         </a>
                      </li>
 
