--- a/views/login.ejs
+++ b/views/login.ejs
@@ -4,58 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/stylesheets/login.css">
     <script src="https://cdn.tailwindcss.com"></script>
-
 </head>
 <body>
-    <!-- <div class="box">
-        <h1>Welcome to </h1>
-        <div class="container">
-            <div class="wrapper">
-                <h1>login</h1>
-
-              <form class="login_form" action="">
-                <span>Username :</span> <br>
-                <input type="text" name="username" id="" placeholder="username">
-                <br>
-                <span>Email</span>
-                <input type="email" name="email" placeholder="Email id">
-                <span>Mobile No :</span>
-   <input type="number" name="mobile" id="" placeholder="Mobile Number">
-
-          <span>College/School Name :</span>
-          <input type="text" name="college" placeholder="college Name">
-
-
-              </form>
-
-            
-            </div>
-        </div>
-    </div> -->
-    <div class="w-full h-screen bg-zinc-300 flex items-center justify-center">
+    <div class="     flex items-center justify-center mt-3">
         <div class="w-80  bg-zinc-100 px-4 py-5 rounded-md">
-            <h1 class="text-3xl tracking-tight capitalize text-center font-semibold text-zinc-700 ">Create new Account</h1>
-            <form action="/resister" method="post">
-                <input class="border-2 rounded-md block w-full px-3 py-2 my-2" type="text" name="username" placeholder="Username">
-                <input class="border-2 rounded-md block w-full px-3 py-2 my-2" type="email" name="email" placeholder="Email">
-                <input class="border-2 rounded-md block w-full px-3 py-2 my-2" type="number" name="contact" placeholder="Contact Number">
-                <input class="border-2 rounded-md block w-full px-3 py-2 my-2" type="password" name="password" placeholder="Password">
-                <!-- <a href="#" class="text-zinc-700 font-semibold">Forgot password?</a> -->
-                <input class="border-2 rounded-full block w-full px-3 py-2 my-2 bg-red-600 text-white" type="submit" value="Create Account ">
+            <h1 class="text-3xl tracking-tight capitalize text-center font-semibold text-zinc-700 ">Welcome to Robonox</h1>
+            <form action="/loginN" method="post">
+                <input class="border-2 rounded-md block w-full px-3 py-2 my-2" type="text" name="username" placeholder="username">
+                <input class="border-2 rounded-md block w-full px-3 py-2 my-2" type="password" name="password" placeholder="password">
+                <a href="#" class="text-zinc-700 font-semibold">Forgot password?</a>
+                <input class="border-2 rounded-full block w-full px-3 py-2 my-2 bg-red-600 text-white" type="submit" value="login">
     
                 <p class="inline-block text-center text-xs font-semibold text-zinc-700">By continuing, you agree to Robonox's Terms of 
                            Service; Opens a new tab and acknowledge that you've read our Privacy Policy; Opens a new tab. Notice at 
                           collection; Opens a new tab.
-                           Not on Robonox yet?
+                           Not on Robonox yet? Sign up
                   </p>
             </form>
-            <a href="/signup" class="inline-block mt-7 text-sm font-semibold text-zinc-700 text-center w-full" >Already have an account?</a>
+            <a href="/signup" class="inline-block mt-7 text-sm font-semibold text-zinc-700 text-center w-full" >Don't have an account?</a>
         </div>
     </div>
-
-
-
 </body>
 </html>
