--- a/public/stylesheets/footer.css
+++ b/public/stylesheets/footer.css
@@ -1,8 +1,8 @@
 .footer-container{
     width: 100%;
-    /* height: 100vh; */
+    height: 100vh;
     position: absolute;
-    top:500vh;
+    top:400vh;
     /* border: 2px solid red; */
     display: flex;
     justify-content: flex-end;
