--- a/public/stylesheets/main_img.css
+++ b/public/stylesheets/main_img.css
@@ -1,8 +1,10 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900");
 
 body{
-  background-color:#444345  ;
-  
+  background-color:#444345;
+  font-family: "Poppins", sans-serif;
+  /* box-sizing: border-box; */
+
 
 }
 body::-webkit-scrollbar{
@@ -12,17 +14,16 @@ body::-webkit-scrollbar{
 
 .main_img{
     width: 100%;
-    height:150vh;
+    height:130vh;
     z-index: -1;
-    /* margin-top: 200px; */
     position:absolute;
-    top: 5.5rem;
+    top: 5rem;
     display: inline-block;
     
 }
 @media screen and (max-width:768px) {
   .main_img img {
-    width: auto;
+    width: 100%;
        
   }
 }
@@ -36,7 +37,8 @@ body::-webkit-scrollbar{
     width: 100%;
     height: 100%;
     /* background-color: hsl(220, 24%, 12%); */
-    background-color: #03a9f4;
+    /* background-color: #03a9f4; */
+    background-color:white;
     mix-blend-mode: overlay;
   }
 
@@ -50,33 +52,22 @@ body::-webkit-scrollbar{
     /* background-image: ; */
 
 }
+.main_img .container{
+  display: flex;
+}
+
 .content{
-    color: azure;
-    font-size: 5rem;
-    position: absolute;
+    position:absolute;
     top:15%;
     left: 50%;
+    font-size:9rem;
+
+}
+.content h2{
+  font-size: 5em;
+
 }
 
-
-/* * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
-}
-
-body {
-  display: flex;
-  background: #000;
-  min-height: 100vh;
-  align-items: center;
-  justify-content: center;
-} */
-
-/* .content {
-  position: relative;
-} */
 
 .content h2 {
   color: #fff;
@@ -87,11 +78,11 @@ body {
 
 .content h2:nth-child(1) {
   color: transparent;
-  -webkit-text-stroke: 2px #03a9f4;
+  -webkit-text-stroke: 2px white;
 }
 
 .content h2:nth-child(2) {
-  color: #03a9f4;
+  color: white;
   animation: animate 4s ease-in-out infinite;
 }
 
@@ -129,8 +120,17 @@ body {
 .hub{
   width: 400px;
   font-size: large;
+  /* text-align: center; */
   position: absolute;
-  top:45vh;
-  left: 50vw;
+  top:34vh;
+  left: 59vw;
   color: white ;
+  line-height: 0.6;
+  animation: backwards;
+}
+@media(orientation:portrait){
+  .hub{
+    top: 28vh;
+    left: 59vw;
+  }
 }
