--- a/public/stylesheets/service.css
+++ b/public/stylesheets/service.css
@@ -3,37 +3,203 @@
 }
 
 
+
 .services{
     width: 100%;
     height: auto;
     /* background-color: black; */
     /* background: linear-gradient(rgb(22, 22, 22), #000); */  
     z-index: 1;
-    background: white;
-    color: aqua;
+    background:white;
+    background-image: url(images/pattern-randomized.png);
+    background-repeat: repeat-y;
+    /* color: aqua; */
     position:absolute;
-    top: 80vh;  
+    top: 85vh;  
     /* border-left: 2px solid aqua ; */
     /* border-right: 2px solid aqua; */
-    border-top-left-radius:5%;
     /* border-bottom-left-radius:5%; */
-    border-bottom-right-radius:5%;
     padding-bottom: 6rem;    
     /* box-shadow: 0 0 10px 5px ; */
 
 }
+/* Portrait orientation */
+@media (orientation: portrait) {
+  .services {
+    border-top-left-radius:250px;
+    border-bottom-right-radius:250px;
+    position:absolute;
+    top:50vh;
+    height: 202vh;
+
+      /* This will make the border radius 10% of the element's width and height */
+  }
+}
+
+/* Landscape orientation */
+@media (orientation: landscape) {
+  .services {
+    border-top-left-radius:5%;
+    border-bottom-right-radius:5%;
+       /* This will make the border radius 5% of the element's width and height */
+  }
+}
+
+.service{
+  width: 100%;
+  height: auto;
+  /* border: 2px solid yellow; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top:40px;
+}
+
+
+
+.service_container{
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  font-size: 5rem;
+  animation: fadeIn 2s ease forwards;
+   /* Initial animation to fade in */
+  /* opacity: 0; */
+
+}
+@media(orientation:portrait){
+  .service_container{
+    width:100%;
+    display: flex;
+    flex-direction:column;
+    /* align-items: center; */
+  }
+}
+
+
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+/* Keyframes for other animation when div is visible */
+@keyframes slideIn {
+  from {
+    transform: translateY(50px); /* Move the div 50px down initially */
+  }
+  to {
+    transform: translateY(0); /* Move the div to its original position */
+  }
+}
+
+
+@media all and (max-width: 500px) {
+  .service_container {
+    /* On small screens, we are no longer using row direction but column */
+    flex-direction: column;
+  }
+}
+
+.serv{
+  width: 40%;
+  height: 45vh;
+  max-height:400px;
+  /* border: 2px solid crimson; */
+  border-radius:1rem;
+  position: relative;
+  margin-top: 20px;
+  /* border: 2px solid transparent;
+  transition: border-color 0.3s; */
+}
+@media (orientation:portrait) {
+  .serv{
+    width: 80%;
+    /* margin: 2rem; */
+  }
+  
+}
+
+
+.serv_content{
+  width: 100%;
+  height: 100%;
+  color: white;
+  display: flex;
+  /* justify-content:center; */
+  align-items: center;
+  flex-direction: column;
+  font-size: 1rem;
+  position: relative;
+
+}
+
+
+
+
+
+
+
+#serv1{
+  background-image:url("/images/eduction2.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+#serv2{
+  background-image:url("/images/manufacturing.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+
+
+
+
+
+
+
 .div_title{
     /* position: absolute; */
     /* background-color: #111; */
     /* min-height: 100vh; */
-    
+    width: 100%;
+    height: auto;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    /* border-radius: inherit; */
     margin-top: 2vh;
+    padding-top: 20px;
 }
+.about_robonox{
+  width: 80vw;
+  font-size: 2rem;
+  text-align: center;
+  /* font-size: 1.2vw; */
+ 
+}
+@media(orientation:portrait){
+  .about_robonox{
+    font-size: 3rem;
+  }
+}
+
+
 .waviy {
   position: relative;
+  /* text-decoration: underline; */
 }
 .waviy span {
   position: relative;
@@ -43,8 +209,9 @@
   font-weight: 500;
 
   text-transform: uppercase;
-  animation: flip 2s infinite;
-  animation-delay: calc(.2s * var(--i))
+  animation: flip 2s ;
+  animation-delay: calc(.2s * var(--i));
+  text-shadow: 1px 1px 2px pink;
 }
 @keyframes flip {
   0%,80% {
@@ -152,10 +319,16 @@
     justify-content: space-between;
     align-items: center;
   
-    
-
-
   }
+    
+  @media (orientation:portrait) {
+    .feedback {
+      height: 30vh;
+    }
+  }
+
+
+
   .bold{
     padding:20px;
     padding-left: 0px;
@@ -206,19 +379,26 @@
     color: #0C52A1;
   }
 
+  
  
  .why{
        width: 100%;
        height: auto;
        /* border: 2px solid black; */
        margin-top: 20px;
+       /* display: flex;
+       justify-content: center;
+       align-items: center; */
        
  }
+ 
+
+
  .why .container1{
        width: 100%;
        color: black;
       /* border: 2px solid orange; */
-      padding-left: 100px;
+       padding-left: 100px;
  }
  .why .container1 span{
   color: #FF752C;
@@ -226,24 +406,50 @@
  }
 
  .why .container2{
-  /* width: 100%; */
-      display: flex;
-      flex-wrap: wrap;
-       justify-content:space-evenly;
-       align-items: center;
+     width: 100%;
+     display: flex;
+     flex-wrap: wrap;
+     justify-content:space-around;
+     align-items: center;
+     font-size: 1.9rem;
+     /* margin: 1rem; */
       /* border: 2px solid orange; */
  }
+ 
+ @media (orientation:portrait ) {
+  .why .container2{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: auto;
+    
+  }
+}
+.container2 .box{
+  width: 400px;
+  height: 400px;
+  border: 2px solid black;
+  padding: 2rem;
+}
+
+@media (orientation:portrait ) {
+  .container2 .box{
+    width:92%;
+    height:auto;
+    padding: 20px;
+    border: 2px solid black;
+    margin: 2rem ;
+    box-sizing:border-box;
+  }
+}
+
  .img-1{
   width: 80px;
  }
- .container2 .box{
-  width:400px;
-  padding: 20px;
-  min-height: 356px;
-  border: 2px solid black;
-  margin-top: 2rem ;
-  margin-bottom : 2rem ;
- }
+ 
+
  .container2 .box h2{
   color: #171C26;
  }
@@ -251,20 +457,18 @@
  .champs{
   width: 100%;
   height: auto;
-  border: 2px solid red;
+  /* border: 2px solid red; */
   margin-top: 2rem;
   display: flex;
   justify-content: center;
   align-items: center;
  }
- .champs #container1{
-  width: 30%;
-  height: 300px;
-  border: 2px solid yellow;
- }
+ .champs_container{
+  margin-left: 2vw;
 
- .champs #container2{
-  width: 70%;
-  height: 300px;
-  border: 2px solid yellow;
+ }
+ .champs span{
+  color: #FF752C;
+  padding-left: 8px;
+  font-size: 4rem;
  }
