--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,212 +1,84 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="HTML5 website template">
-    <meta name="keywords" content="global, template, html, sass, jquery">
-    <meta name="author" content="Bucky Maler">
-        <!-- tailwindcss link -->
-    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
 
-        <!-- fonts link -->
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
-        <!-- css links -->
-    <link rel='stylesheet' href='/stylesheets/navbar.css' />
-    <link rel='stylesheet' href='/stylesheets/main_img.css' />
-    <link rel='stylesheet' href='/stylesheets/robo.css' />
-    <link rel='stylesheet' href='/stylesheets/service.css' />
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link rel='stylesheet' href='/stylesheets/typing_effect.css' />
-    <link rel='stylesheet' href='/stylesheets/typing_effect.css' />
-    <link rel='stylesheet' href='/stylesheets/slide-container.css' />
-    <link rel='stylesheet' href='/stylesheets/feedback.css' />
-    <link rel='stylesheet' href='/stylesheets/footer.css' />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  </head>
-  <body>
     <!-- css in navbar.css  -->
-    <header class="header">
-      <nav class="nav container">
-         <div class="nav__data">
-            <a href="#" class="nav__logo">
-               <i class="ri-planet-line"></i> Robonox
-            </a>
-            
-            <div class="nav__toggle" id="nav-toggle">
-               <i class="ri-menu-line nav__burger"></i>
-               <i class="ri-close-line nav__close"></i>
-            </div>
-         </div>
 
-         <!--=============== NAV MENU ===============-->
-         <div class="nav__menu" id="nav-menu">
-            <ul class="nav__list">
-               <li><a href="#" class="nav__link">Home</a></li>
-
-               <li><a href="#" class="nav__link">Company</a></li>
-
-               <!--=============== DROPDOWN 1 ===============-->
-               <li class="dropdown__item">
-                  <div class="nav__link">
-                     Analytics <i class="ri-arrow-down-s-line dropdown__arrow"></i>
-                  </div>
-
-                  <ul class="dropdown__menu">
-                     <li>
-                        <a href="#" class="dropdown__link">
-                           <i class="ri-pie-chart-line"></i> Overview
-                        </a>                          
-                     </li>
-
-                     <li>
-                        <a href="#" class="dropdown__link">
-                           <i class="ri-arrow-up-down-line"></i> Transactions
-                        </a>
-                     </li>
-
-                     <!--=============== DROPDOWN SUBMENU ===============-->
-                     <li class="dropdown__subitem">
-                        <div class="dropdown__link">
-                           <i class="ri-bar-chart-line"></i> Reports <i class="ri-add-line dropdown__add"></i>
-                        </div>
-
-                        <ul class="dropdown__submenu">
-                           <li>
-                              <a href="#" class="dropdown__sublink">
-                                 <i class="ri-file-list-line"></i> Documents
-                              </a>
-                           </li>
-   
-                           <li>
-                              <a href="#" class="dropdown__sublink">
-                                 <i class="ri-cash-line"></i> Payments
-                              </a>
-                           </li>
-   
-                           <li>
-                              <a href="#" class="dropdown__sublink">
-                                 <i class="ri-refund-2-line"></i> Refunds
-                              </a>
-                           </li>
-                        </ul>
-                     </li>
-                  </ul>
-               </li>
-               
-               <li><a href="#" class="nav__link">Products</a></li>
-
-               <!--=============== DROPDOWN 2 ===============-->
-               <li class="dropdown__item">
-                  <div class="nav__link">
-                     Users <i class="ri-arrow-down-s-line dropdown__arrow"></i>
-                  </div>
-
-                  <ul class="dropdown__menu">
-                     <li>
-                        <a href="/profile" class="dropdown__link">
-                           <i class="ri-user-line"></i> Profiles
-                        </a>                          
-                     </li>
-
-                     <li>
-                        <a href="#" class="dropdown__link">
-                           <i class="ri-lock-line"></i> Accounts
-                        </a>
-                     </li>
-
-                     <li>
-                        <a href="#" class="dropdown__link">
-                           <i class="ri-message-3-line"></i> Messages
-                        </a>
-                     </li>
-                  </ul>
-               </li>
-
-               <li  class="dropdown__item"> 
-                  <div class="nav__link">
-                     <i class='fas fa-user-alt' style='font-size:24px;border: 2px solid white;padding:10px;border-radius: 50%;'></i>
-                  </div>
-                  <ul class="dropdown__menu">
-                     <li>
-                        <a href="/login" class="dropdown__link">
-                           <i class="ri-pie-chart-line"></i> LogIn
-                        </a>                          
-                     </li>
-
-                     <li>
-                        <a href="/signup" class="dropdown__link">
-                           <i class="ri-arrow-up-down-line"></i>SignUp
-                        </a>
-                     </li>
-
-              </li>
-            </ul>
-         </div>
-      </nav>
-    </header>
-
-
+   <% include ./partial/header.ejs %>    
 
     <!-- css in main_img.css  -->
    <div class="main_img">
-      <img src="/images/pexels-rahul-pandit-1933900.jpg" alt="" class="bg_img">
-      <!-- <h1 class="main_title">ROBONOX</h1> -->
-       <section>
+      <img src="/images/background_sky_blue.jpg" alt="" class="bg_img">
+       <div class="container">
          <div class="content">
            <h2>ROBONOX</h2>
            <h2>ROBONOX</h2>
          </div>
-
-          <!-- typing effect -->
-              <!-- <div class="wrapper">
-                <span class="first-text">The Most : </span>
-                <ul class="sec-texts">
-                    <li><span>Affordable</span></li>
-                    <li><span>Valuable</span></li>
-                    <li><span>Reliable</span></li>
-                    <li><span>Favorable</span></li>
-                </ul>
-              </div> -->
-           <!-- typing effect end -->     
-             
-
-           <div class="hub">
+         <div class="hub">
                THE
                   TECH<H1>TRAINING</H1> & <H1>MANUFACTURING</H1>HUB
-           </div>
-
-       </section>
+          </div>
+       </div>
    </div>
 
 
 
-       <!-- css in service.css -->
+     <!-- css in service.css -->
   <div class="services">
+
          <div class="div_title">
-            <!-- <h1>Learning Programs</h1> -->
             <div class="waviy">
-               <span style="--i:1">L</span>
-               <span style="--i:2">E</span>
-               <span style="--i:3">A</span>
-               <span style="--i:4">R</span>
-               <span style="--i:5">N</span>
-               <span style="--i:6">I</span>
-               <span style="--i:7">N</span>
-               <span style="--i:8">G</span>
-               <!-- <span style="--i:9">  </span> -->
+               <span style="--i:1">A</span>
+               <span style="--i:2">B</span>
+               <span style="--i:3">O</span>
+               <span style="--i:4">U</span>
+               <span style="--i:5">T</span>
                &nbsp;&nbsp;&nbsp;&nbsp;
-               <span style="--i:10">P</span>
-               <span style="--i:11">R</span>
+
+               <span style="--i:6">R</span>
+               <span style="--i:7">O</span>
+               <span style="--i:8">B</span>
+               <span style="--i:10">O</span>
+               <span style="--i:11">N</span>
                <span style="--i:12">O</span>
-               <span style="--i:13">G</span>
-               <span style="--i:14">R</span>
-               <span style="--i:15">A</span>
-               <span style="--i:16">M</span>
-               <span style="--i:17">S</span>
-               <span style="--i:18">.</span>
+               <span style="--i:13">X</span>
+              
             </div>
-        </div>
+            <div class="about_robonox">
+               <p>ROBONOX is at the forefront of technological innovation, leveraging the power of robotics and automation to drive advancements in various industries. The company is committed to 
+                  pushing the boundaries of what is possible in the fields of robotics, automation, and artificial intelligence, with a mission to create solutions that redefine industry standards.
+                  In addition to its focus on technological solutions, ROBONOX is dedicated to fostering a culture of learning and education. The company actively engages with educational institutions and students, promoting knowledge exchange and creating opportunities for skill development in emerging technologies.</p>
+            </div>
+         </div>
+
+         <!-- services div education and MANUFACTURING -->
+         <div class="service">
+            <div class="waviy">
+               <span style="--i:1">S</span>
+               <span style="--i:2">E</span>
+               <span style="--i:3">R</span>
+               <span style="--i:4">V</span>
+               <span style="--i:5">I</span>
+               <span style="--i:6">C</span>
+               <span style="--i:7">E</span>
+               <span style="--i:8">S</span>
+              
+            </div>
+
+          <div class="service_container" id="ser_container">
+            <div class="serv" id="serv1">
+               <div class="serv_content">
+                  <h1>TRAINING</h1>
+                  <p></p>
+               </div>
+            </div>
+            <div class="serv" id="serv2">
+               <div class="serv_content">
+                  <h1>MANUFACTURING</h1>
+               <!-- <i class="fa-solid fa-book-open-reader"></i> -->
+               </div>
+            </div>
+          </div>
+
+
+         </div>
        
 <!-- cards starts ,  all css in services.css-->
      <!-- <div class="cards">
@@ -263,7 +135,6 @@
          <!-- all css in services.css -->
      <div class="feedback">    
          <div class="container" id="1">
-            
             <i class="fa-solid fa-graduation-cap"></i>
             <p class="bold">1M +</p>
             <p class="b">students</p>
@@ -312,16 +183,13 @@
      </div>
 
 
-     <!--  css in service.css -->
+     <!--  css in service.css and feedback.css  -->
      <div class="champs">
-        <div id="container1">
-           <h1>Watch our champs</h1><br>
-           <span>Learning in action</span> <br>
-           <button>BOOK YOUR FIRST FREE CLASS</button>
-        </div>
-        <div id="container2">
-
-        </div>
+         <div class="champs_container">
+         <h1>watch our champs</h1>
+         <span>Learning in action</span>
+          </div>
+          <% include ./feedback.ejs %>    
 
      </div>
 
@@ -335,7 +203,6 @@
     <!-- css in slide-container.css  -->
   <div class="Team">  
     <div class="home-container">
-     
       <div class="profile-card">
           <div class="img">
               <img src="/images/aanan.jpg">
