--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,13 +1,48 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
 
-    <h1>Welcome Mr. <%=user.username %> to Robonox</h1>
-    
+  <% include ./partial/header.ejs %>    
+
+  
+  <div class="profile w-full min-h-screen bg-white-800 text-white pt-1">
+    <!-- form creation to upload image from the client -->
+          <form id="uploadform" hidden  action="/fileupload"  method="post" enctype="multipart/form-data">
+            
+        
+            <input type="file" name="image" id="" />
+  
+  
+          </form> 
+  
+          <div class="profdets flex flex-col items-center pt-3">
+            <div class="relative">
+              <span id="uploadicon" class="w-8 h-8 bg-zinc-200 absolute bottom-0 right-0 rounded-full flex items-center justify-center">
+                <i class=" text-zinc-800 ri-pencil-line"></i>
+               </span>
+               <div class="w-32 h-32 bg-zinc-200  rounded-full overflow-hidden"> 
+                <img src="/images/uploads/<%= user.profileImage %>" alt="" class="w-full h-full object-cover">
+               </div>
+              
+            </div>
+              <h1 class="text-1xl font-semibold "><%= user.username %></h1>
+              <h3 class="text-md">@username</h3>
+              <a href="/edit" class="px-7 py-2 mt-3 bg-zinc-700 rounded-full">Edit</a>
+              <a class="px-3 mt-3 mb-3 py-1 bg-red-700 rounded-lg  overflow-hidden" href="/add" >Add New post</a>
+          </div>
+  
+      
+      
+      </div>
+  <script>
+    // jab koi upload icon pr click krega to 
+    document.querySelector("#uploadicon").addEventListener("click",function(){
+             document.querySelector("#uploadform input").click();
+    })
+  
+    document.querySelector("#uploadform input").addEventListener("change",function(){
+      document.querySelector("#uploadform").submit();
+    })
+  
+  </script>
 </body>
 </html>
+
+
