make all changes finally

--- a/public/stylesheets/feedback.css
+++ b/public/stylesheets/feedback.css
@@ -1,4 +1,4 @@
-/* body{
+ /* body{
     margin-top: 30px !important;
     background-color:#F2EFE8 !important;
 }
@@ -8,7 +8,7 @@ h3,p{
 a:hover,a:focus{
     text-decoration: none !important;
     outline: none !important;
-} */
+} */ */
 .testimonial{
     text-align: center;
     color: #F2EFE8;
