--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,14 +1,11 @@
 
   <% include ./partial/header.ejs %>    
 
-  
-  <div class="profile w-full min-h-screen bg-white-800 text-white pt-1">
-    <!-- form creation to upload image from the client -->
-          <form id="uploadform" hidden  action="/fileupload"  method="post" enctype="multipart/form-data">
+  <!-- <div class="profile w-full min-h-screen bg-white-800 text-white">
+         <form id="uploadform" hidden  action="/fileupload"  method="post" enctype="multipart/form-data">
             
         
             <input type="file" name="image" id="" />
-  
   
           </form> 
   
@@ -31,18 +28,15 @@
       
       
       </div>
-  <script>
-    // jab koi upload icon pr click krega to 
-    document.querySelector("#uploadicon").addEventListener("click",function(){
-             document.querySelector("#uploadform input").click();
-    })
-  
-    document.querySelector("#uploadform input").addEventListener("change",function(){
-      document.querySelector("#uploadform").submit();
-    })
-  
-  </script>
+     
+
+ 
 </body>
 </html>
 
+ -->
 
+ <div class="profile_page">
+  
+
+ </div>
