--- a/public/stylesheets/footer.css
+++ b/public/stylesheets/footer.css
@@ -1,19 +1,20 @@
 .footer-container{
     width: 100%;
-    height: 100vh;
-    position: absolute;
-    top:400vh;
+    height:auto ;
+    /* position: absolute;
+    top:398vh; */
     /* border: 2px solid red; */
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
-    min-height: 40vh;
+    /* min-height: 40vh; */
+    /* margin-top:-20vh; */
 }
 
 .footer{
     position: relative;
     width: 100%;
-    background: #3586ff;
+    background:#4E3BC2;
     min-height: 100px;
     padding: 20px 50px;
     display: flex;
@@ -100,21 +101,3 @@
     animation: animateWave_02 3s linear infinite;
 }
 
-@keyframes animateWave {
-    0%{
-        background-position-x: 1000px ;
-    }
-    100%{
-        background-position-x:0px ;
-    }
-    
-}
-@keyframes animateWave_02 {
-    0%{
-        background-position-x: 0px ;
-    }
-    100%{
-        background-position-x:1000px ;
-    }
-    
-}
