--- a/public/stylesheets/header.css
+++ b/public/stylesheets/header.css
@@ -1,103 +1,100 @@
-nav{
-    background: hsl(220, 24%, 12%);
-    height: 80px;
-    width: 100%;
+body {
+    margin: 0;
+    font-family: Arial, sans-serif;
+}
+
+.navbar {
+    background-color: #4E3BC2;
+    /* #5038C0 */
+    background: linear-gradient(to bottom,#4E3BC2, #5038C0);
+    color: #fff;
+    /* padding: 15px 0; */
+    /* top: 0px; */
+    /* position:fixed; */
+
+}
+
+.container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-}
-
-
-
-label.logo{
-  margin-left:50px ;
-  padding-top: 10px;
-   width: 60px;
-}
-
-nav ul{
-    float: right;
-    margin-right: 20px;
-}
-
-nav ul li{
-    display: inline-block;
-    line-height: 80px;
-    margin: 0 5px;
 
 }
 
-nav ul li a{
-    color:white ;
-    font-size: 17px;
-    padding: 7px 13px;
-    border-radius: 3px;
-    text-transform: uppercase;
+.logo {
+    font-size: 1.5rem;
 }
 
-
-a.active, a:hover{
-    background: #1b9bff;
-    transition: .5s;
+.nav-links {
+    display: flex;
 }
 
-.checkbtn{
-    font-size:30px;
+.nav-links a {
     color: white;
-    float: right;
-    line-height: 80px;
-    margin-right: 40px;
+    text-decoration: none;
+    margin: 0 15px;
+    font-size: 1.9rem;
+    font-weight: 500;
+    padding: 0.2rem;
+    border-radius: 5px;
+}
+
+.nav-links a:hover{
+   text-decoration: none;
+   background-color: white;
+   color: #4E3BC2;
+
+   
+}
+
+.burger {
+    display: none;
+    flex-direction: column;
     cursor: pointer;
-    display: none;
-
 }
 
-#check{
-    display: none;
-}
-@media(max-width:952px){
-    label.logo{
-         font-size: 30px;
-         padding-left: 50px;
-
-    }
-    nav ul li a{
-        font-size: 16px;
-    }
+.line1, .line2, .line3 {
+    width: 25px;
+    height: 3px;
+    background-color: #fff;
+    margin: 4px 0;
 }
 
-@media(max-width:858px){
-    .checkbtn{
-        display:block;
-    }
-    ul{
-        position: fixed;
-        width: 100%;
-        height:100vh;
-        background:#2c3e50;
-        top:80px;
-        left: -100%;
-        text-align: center;
-        transition: all .5s;
-
-    }
-    nav ul li{
-        display: block;
-        margin: 50px 0;
-       line-height: 30px;
-    }
-    nav ul li a{
-        font-size:20px;
-
-    }
-    a:hover, a.active{
-        background: none;
-        color: #0082e6;
-    }
-    #check:checked ~ul{
-        left: 0;
-    }
-
+.logo_class{
+   display: flex;
+   align-items: center;
+   gap: 10px;
 }
 
+.logo_class img{
+   width: 8%;
+}
+.logo_class h1{
+    font-size: 3rem;
+}
 
+@media(orientation:portrait){
+    .logo_class img{
+        width: 18%;
+    }
+    .logo_class h1{
+        font-size: 2.2rem;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .nav-links {
+        display: none;
+    }
+    
+
+    .burger {
+        display: flex;
+    }
+}
+
+.profile_logo{
+    border: 2px solid white;
+    padding: 5px;
+    border-radius: 50%;
+}
