--- a/public/stylesheets/main_img.css
+++ b/public/stylesheets/main_img.css
@@ -10,16 +10,158 @@ body{
 body::-webkit-scrollbar{
   display: none;
 }
+.profile{
+  padding: 20vh;
+}
 
 
 .main_img{
     width: 100%;
-    height:130vh;
+    height:100vh;
     z-index: -1;
     position:absolute;
+
     top: 5rem;
     display: inline-block;
     
+    margin: 0px;
+    color: black;
+    /* overflow-x: hidden; */
+    /* background-color: #4E3BC2; */
+    background: linear-gradient(to bottom,#4E3BC2, rgb(116, 8, 155));
+
+}
+
+
+.hexagon{
+  width: 00px;
+  position: absolute;
+  top: 60vh;
+  left: 50vw;
+  opacity:0.43;
+}
+.github{
+  width: 100px;
+  position: absolute;
+  top: 70vh;
+  left: 75vw;
+  opacity:0.23;
+}
+.jquery{
+  width: 100px;
+  position: absolute;
+  top: 63vh;
+  left: 80vw;
+  opacity:0.33;
+}
+.node{
+  width: 100px;
+  position: absolute;
+  top: 60vh;
+  left: 70vw;
+  opacity:0.43;
+}
+.c{
+  width: 0px;
+  position: absolute;
+  top: 60vh;
+  left: 70vw;
+  opacity:0.43;
+}
+.fa-python{
+  /* width: 100px; */
+  font-size: 5rem;
+  position: absolute;
+  top: 65vh;
+  left: 95vw;
+  opacity:0.43;
+}
+.java{
+  width: 100px;
+  position: absolute;
+  top: 60vh;
+  left: 65vw;
+  opacity:0.33;
+}
+.fa-html5{
+  /* width: 100px; */
+  font-size: 5rem;
+  position: absolute;
+  top: 70vh;
+  left: 90vw;
+  opacity:0.43;
+}
+
+
+
+@media (orientation:portrait){
+  .main_img{
+    top:-19vh;
+    background:#4E3BC2;
+
+  }
+  
+.hexagon{
+  width: 80px;
+  position: absolute;
+  top: 30vh;
+  left: 50vw;
+  opacity:0.43;
+}
+.github{
+  width: 100px;
+  position: absolute;
+  top: 30vh;
+  left: 75vw;
+  opacity:0.23;
+}
+.jquery{
+  width: 100px;
+  position: absolute;
+  top: 35vh;
+  left: 80vw;
+  opacity:0.33;
+}
+.node{
+  width: 100px;
+  position: absolute;
+  top: 30vh;
+  left: 70vw;
+  opacity:0.43;
+}
+.c{
+  width: 0px;
+  position: absolute;
+  top: 30vh;
+  left: 70vw;
+  opacity:0.43;
+}
+.fa-python{
+  /* width: 100px; */
+  font-size: 5rem;
+  position: absolute;
+  top: 32vh;
+  left: 95vw;
+  opacity:0.43;
+}
+.java{
+  width: 100px;
+  position: absolute;
+  top: 32vh;
+  left: 65vw;
+  opacity:0.33;
+}
+.fa-html5{
+  /* width: 100px; */
+  font-size: 5rem;
+  position: absolute;
+  /* top: 35vh; */
+  left: 40vw;
+  opacity:0.43;
+}
+
+
+
 }
 @media screen and (max-width:768px) {
   .main_img img {
@@ -29,7 +171,7 @@ body::-webkit-scrollbar{
 }
 
 
-.main_img::before { 
+/* .main_img::before { 
     content: "";
     position: absolute;
     top: 0;
@@ -38,99 +180,52 @@ body::-webkit-scrollbar{
     height: 100%;
     /* background-color: hsl(220, 24%, 12%); */
     /* background-color: #03a9f4; */
-    background-color:white;
-    mix-blend-mode: overlay;
-  }
+    /* background-color:white; */
+    /* mix-blend-mode:color; */
+  
 
 
-.main_img .bg_img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    background-size: cover;
-    filter: blur(5px) brightness(70%);
-    /* background-image: ; */
+.main_img img{
+  /* margin-top: 10vh; */
+    width: 60%;
+    /* height: auto; */
+    /* object-fit: cover; */
+    /* background-size: cover; */
+    filter: drop-shadow(10px 10px 20px black);
 
 }
-.main_img .container{
+.main_img .contain{
+  width: 100%;
+  /* margin-left: 10vw; */
+  height: 70vh;
   display: flex;
+  align-items: center;
+  justify-content:start;
+  /* padding: 10%; */
+}
+.b1{
+ margin-top: 6vh;
+  width:50%;
 }
 
-.content{
-    position:absolute;
-    top:15%;
-    left: 50%;
-    font-size:9rem;
-
-}
-.content h2{
-  font-size: 5em;
-
-}
-
-
-.content h2 {
-  color: #fff;
-  font-size: 2em;
-  position: absolute;
-  transform: translate(-50%, -50%);
-}
-
-.content h2:nth-child(1) {
-  color: transparent;
-  -webkit-text-stroke: 2px white;
-}
-
-.content h2:nth-child(2) {
-  color: white;
-  animation: animate 4s ease-in-out infinite;
-}
-
-@keyframes animate {
-  0%,
-  100% {
-    clip-path: polygon(
-      0% 45%,
-      16% 44%,
-      33% 50%,
-      54% 60%,
-      70% 61%,
-      84% 59%,
-      100% 52%,
-      100% 100%,
-      0% 100%
-    );
-  }
-
-  50% {
-    clip-path: polygon(
-      0% 60%,
-      15% 65%,
-      34% 66%,
-      51% 62%,
-      67% 50%,
-      84% 45%,
-      100% 46%,
-      100% 100%,
-      0% 100%
-    );
-  }
-}
-
+ 
 .hub{
-  width: 400px;
+  /* width:60%; */
   font-size: large;
   /* text-align: center; */
-  position: absolute;
-  top:34vh;
-  left: 59vw;
-  color: white ;
+  /* position: absolute; */
+  /* top:34vh; */
+  /* left: 59vw; */
+  color:white  ;
   line-height: 0.6;
   animation: backwards;
+  line-height: 5rem;
 }
 @media(orientation:portrait){
   .hub{
-    top: 28vh;
+    top: 35vh;
     left: 59vw;
   }
 }
+
+
