--- a/views/partial/header.ejs
+++ b/views/partial/header.ejs
@@ -11,10 +11,14 @@
     href="https://cdn.jsdelivr.net/npm/remixicon@4.0.0/fonts/remixicon.css"
     rel="stylesheet"
   />
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <link rel="stylesheet" href="stylesheets/feedback.css">
        <!-- fonts link -->
        <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet">
        <!-- css links -->
    <link rel='stylesheet' href='/stylesheets/navbar.css' />
+   <link rel='stylesheet' href='/stylesheets/profile.css' />
    <link rel='stylesheet' href='/stylesheets/main_img.css' />
    <link rel='stylesheet' href='/stylesheets/service.css' />
    <link rel='stylesheet' href='/stylesheets/style.css' />
@@ -23,28 +27,48 @@
    <link rel='stylesheet' href='/stylesheets/footer.css' />
    <link rel='stylesheet' href='/stylesheets/feedback.css' />
    <link rel='stylesheet' href='/stylesheets/header.css' />
+   <link rel="stylesheet" href='/stylesheets/slid.css'/>
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   
    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body> 
    <% if(nav === true){ %>
-    <nav>
-      <input type="checkbox" id="check">
-      <label for="check" class="checkbtn">
-         <i class="fas fa-bars"></i>
-      </label>
-      <label class="logo"><img src="/images/logo.png" alt=""></label>
-      <ul>
-         <li><a class="active" href="/">Home</a></li>
-         <li><a href="">About</a></li>
-         <li><a href="#">Services</a></li>
-         <li><a href="/profile">Profile</a></li>
-         <a href="#"> <i class='fas fa-user-alt profile_logo' style='font-size:24px;color: white; border: 2px solid white;padding:10px;border-radius: 50%;'></i></a>
-      </ul>
-      
-    </nav>
-     
+      <nav class="navbar" id="navbar">
+         <div class="container">
+            <div class="logo_class">
+                  <img src="/images/logo.png" alt="">
+                  <h1>ROBONOX</h1>
+            </div>
+         
+             <div class="nav-links" id="nav-links">
+               <a class="active" href="/">Home</a>
+               <a href="#about">About</a>
+               <a href="#service">Services</a>
+               <a href="#footer">Contact</a>  
+    
+               
+
+                <a href="/login"> <i class='fas fa-user-alt profile_logo'></i></a>
+             </div>
+             <div class="burger" id="burger">
+                 <div class="line1"></div>
+                 <div class="line2"></div>
+                 <div class="line3"></div>
+             </div>
+         </div>
+     </nav>
+   
+
+     <script>
+      const burger = document.getElementById('burger');
+const navLinks = document.getElementById('nav-links');
+
+burger.addEventListener('click', () => {
+    navLinks.classList.toggle('show');
+});
+
+     </script>
 
 
    
