--- a/views/index.ejs
+++ b/views/index.ejs
@@ -96,7 +96,7 @@
                   <h1 class="card-title">TRAINING</h1>
                   <p class="card-sub-title">All the courses available</p>
                   <p class="card-info">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic corrupti cumque blanditiis vero cupiditate officiis fugit ex. Asperiores rem magnam, eveniet aperiam repudiandae quas at.</p>
-                  <button class="card-btn">Explore Courses</button>
+                   <button class="card-btn" onclick="window.location.href='/training'">Explore Courses</button>
                </div>
             </div>
             <div class="serv" id="serv2">
@@ -108,7 +108,7 @@
                 <h1 class="card-title">MANUFACTURING</h1>
                 <p class="card-sub-title">All the courses available</p>
                 <p class="card-info">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic corrupti cumque blanditiis vero cupiditate officiis fugit ex. Asperiores rem magnam, eveniet aperiam repudiandae quas at.</p>
-                <button class="card-btn">Explore Courses</button>
+               <button class="card-btn">Explore Courses</button>
                </div>
             </div>
           </div>
