--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,7 +39,7 @@
        </div>
    </div>
  
-    <img src="/images/hexagon.webp" alt="" class="hexagon">   
+    <!-- <img src="/images/MSME_M.png" alt="" class="msme">    -->
     <img src="/images/github.webp" alt="" class="github">   
     <img src="/images/jqery.webp" alt="" class="jquery">   
     <img src="/images/java.png" alt="" class="java"> 
@@ -95,7 +95,8 @@
                <div class="serv_content">
                   <h1 class="card-title">TRAINING</h1>
                   <p class="card-sub-title">All the courses available</p>
-                  <p class="card-info">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic corrupti cumque blanditiis vero cupiditate officiis fugit ex. Asperiores rem magnam, eveniet aperiam repudiandae quas at.</p>
+                  <p class="card-info">ROBONOX prioritizes education through collaborations, fostering continuous learning and integrating cutting-edge tech. Its initiatives in robotics, coding, machine learning, and AI envision an empowered future where education shapes industry standards.
+                  </p>
                    <button class="card-btn" onclick="window.location.href='/training'">Explore Courses</button>
                </div>
             </div>
@@ -107,7 +108,7 @@
                <div class="serv_content">
                 <h1 class="card-title">MANUFACTURING</h1>
                 <p class="card-sub-title">All the courses available</p>
-                <p class="card-info">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic corrupti cumque blanditiis vero cupiditate officiis fugit ex. Asperiores rem magnam, eveniet aperiam repudiandae quas at.</p>
+                <p class="card-info">ROBONOX pioneers precision manufacturing through robotics, automation, and a commitment to quality. By integrating cutting-edge tech, it sets new industry standards, driving innovation for the future.</p>
                <button class="card-btn">Explore Courses</button>
                </div>
             </div>
