--- a/views/edu.ejs
+++ b/views/edu.ejs
@@ -5,14 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/stylesheets/edu.css">
     <link rel="stylesheet" type="text/css" href="/stylesheets/slide.css">
+
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <title>welcome</title>
-   
+
 </head>
-<body>
+<body>    
+  <nav class="navbar" id="navbar">
+    <div class="contain">
+       <div class="logo_class">
+             <img src="/images/logo.png" alt="">
+             <h1>ROBONOX</h1>
+       </div>
+    
+        <div class="nav-links" id="nav-links">
+          <a class="active" href="/">Home</a>
+          <a href="#about">About</a>
+          <a href="#service">Services</a>
+          <a href="#footer">Contact</a>  
+
+          
+
+           <!-- <a href="/login"> <i class='fas fa-user-alt profile_logo'></i></a> -->
+        </div>
+        <!-- <div class="burger" id="burger">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </div> -->
+    </div>
+</nav>
+
+
 
 
     
