--- a/public/stylesheets/edu.css
+++ b/public/stylesheets/edu.css
@@ -23,6 +23,10 @@ body{
     background-color: var(--bg-color);
     color: var(--text-color);
 }
+
+
+
+
 section{
     padding: 80px 13%;
 }
@@ -43,7 +47,8 @@ section{
     margin: 15px 0 15px;
 }
 .home-text h6{
-    color: var(--main-color);
+    /* color: var(--main-color); */
+    color: #4E3BC2;
     font-size: 18px;
     font-weight:600 ;
     letter-spacing: 2px;
@@ -65,7 +70,7 @@ section{
     width: 100%;
     outline: none;
     padding: 16px 140px 16px 15px;
-    border: 2px solid var(--main-color);
+    border: 2px solid  #4E3BC2;
     border-radius: 30px;
 
 }
@@ -74,7 +79,7 @@ section{
     display: inline-block;
     border: none;
     outline: none;
-    background: var(--main-color);
+    background:  #4E3BC2;
     color: var(--bg-color);
     padding: 16px 40px;
     border-radius: 30px;
@@ -127,19 +132,13 @@ section{
 .center-text{
     text-align: center;
 }
-.center-text h5{
-    color: var(--main-color);
-    font-size: 16px;
-    font-weight: 600;
-    letter-spacing: 1px;
-    margin-bottom: 20px;
-}
+
 .center-text{
     text-align: center;
 
 }
 .center-text h5{
-    color: var(--main-color);
+    color:  #4E3BC2;
     font-size: 16px;
     font-weight: 600;
     letter-spacing: 1px;
@@ -201,7 +200,7 @@ section{
     padding: 16px 30px;
     font-size: var(--p-font);
     font-weight: 700;
-    background: var(--main-color);
+    background: #4E3BC2;
     color: var(--bg-color);
     border-radius: 30px;
     transition: all .40s ease;
@@ -283,6 +282,7 @@ section{
     transition: all .40s ease;
 
 }
+
 .contact-content li a:hover{
     transform: translateX(10px );
     color: var(--main-color);
@@ -380,4 +380,104 @@ section{
         
     }
 
+}
+
+
+
+/* <======edu_navbar==========> */
+.navbar {
+    background-color: #4E3BC2;
+    /* #5038C0 */
+    background: linear-gradient(to bottom,#4E3BC2, #5038C0);
+    color: #fff;
+    /* padding: 15px 0; */
+    /* top: 0px; */
+    /* position:fixed; */
+
+}
+
+.contain {
+    padding: 5px 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+.logo{
+    font-size: 0.1rem;
+}
+
+.nav-links {
+    display: flex;
+}
+
+.nav-links a {
+    color: white;
+    text-decoration: none;
+    margin: 0 15px;
+    font-size: 1.4rem;
+    font-weight: 500;
+    padding: 0.2rem;
+    border-radius: 5px;
+}
+
+.nav-links a:hover{
+   text-decoration: none;
+   background-color: white;
+   color: #4E3BC2;
+
+   
+}
+
+.burger {
+    display: none;
+    flex-direction: column;
+    cursor: pointer;
+}
+
+.line1, .line2, .line3 {
+    width: 25px;
+    height: 3px;
+    background-color: #fff;
+    margin: 4px 0;
+}
+
+.logo_class{
+   display: flex;
+   align-items: center;
+   gap: 10px;
+}
+
+.logo_class img{
+   width: 8%;
+}
+.logo_class h1{
+    font-size: 2rem;
+}
+
+@media(orientation:portrait){
+    .logo_class img{
+        width: 18%;
+    }
+    .logo_class h1{
+        font-size: 2.2rem;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .nav-links {
+        display: none;
+    }
+    
+
+    .burger {
+        display: flex;
+    }
+}
+
+.profile_logo{
+    border: 2px solid white;
+    padding: 5px;
+    border-radius: 50%;
 }
