--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,8 +6,12 @@
     <!-- css in main_img.css  -->
    <div class="main_img">
        <div class="contain">
-          <div class="b1"><img src="/images/10258678_4384867.svg" alt=""></div>
-          <div class="hub">
+               <div class="b1">
+                   <img src="/images/img-2.svg" alt="">
+                   <!-- <img src="/images/img-3.svg" alt="">
+                   <img src="/images/10258678_4384867.svg" alt=""> -->
+               </div>
+         <div class="hub">
                THE
                   TECH<H1><div class="waviy">
                     <span style="--i:1">T</span>
@@ -35,7 +39,7 @@
                   <span style="--i:13">G</span>
                  
                </div></H1>HUB
-          </div>
+         </div>
        </div>
    </div>
  
@@ -268,14 +272,15 @@
                     <span style="--i:2">O</span>
                     <span style="--i:3">L</span>
                     <span style="--i:4">L</span>
-                    <span style="--i:5">E</span>
+                    <span style="--i:5">A</span>
                     <span style="--i:6">B</span>
-                    <span style="--i:7">R</span>
-                    <span style="--i:8">A</span>
-                    <span style="--i:9">T</span>
-                    <span style="--i:10">O</span>
-                    <span style="--i:11">R</span>
-                    <span style="--i:12">S</span>
+                    <span style="--i:7">O</span>
+                    <span style="--i:8">R</span>
+                    <span style="--i:9">A</span>
+                    <span style="--i:10">T</span>
+                    <span style="--i:11">O</span>
+                    <span style="--i:12">R</span>
+                    <span style="--i:13">S</span>
                    
                  </div>
      
@@ -376,6 +381,13 @@
 
          </ul>
          <p> ©2024 Online Tutorials | All Rights Reserved </p>
+         <div class="contact-content">
+            <li><a href="">Jammu&Kashmir srinagar,190006</a></li>
+            <div class="fle">
+            <li><a href="">Robonox@gmail.com &nbsp;&nbsp;</a> </li>
+            <li><a href=""> ||&nbsp;&nbsp;  7051350645</a></li>
+            </div>
+        </div>
     </div>
  </div>
 
