--- a/public/stylesheets/slide-container.css
+++ b/public/stylesheets/slide-container.css
@@ -1,6 +1,6 @@
 .Team{
     width: 100%;
-    height: auto;
+    height:80vh;
     /* border: 2px solid green; */
     /* position:absolute; */
     /* top: 260vh; */
